--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/dino.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprennez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
+    <meta name="author" content="taisezmoi">
+    <meta name="keywords" content="développement web, portfolio, blog, raspberry pi, station météo">
+    <meta property="og:title" content="taisezmoi">
+    <meta property="og:description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprennez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
+    <meta property="og:image" content="src/assets/images/ordi.jpg">
+    <meta property="og:url" content="https://www.taisezmoi.com/">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>taisezmoi</title>
   </head>
