chore: tidying up before backend

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <div id="app" class="h-screen"></div>
-    <script type="module" src="/src/assets/frontend/js/main.js"></script>
+    <script type="module" src="/src/frontend/js/main.js"></script>
   </body>
 </html>
