chore: backend init

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprennez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
     <meta name="author" content="taisezmoi">
-    <meta name="keywords" content="développement web, portfolio, blog, raspberry pi, station météo">
+    <meta name="keywords" content="développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, station météo">
     <meta property="og:title" content="taisezmoi">
     <meta property="og:description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
     <meta property="og:image" content="src/assets/images/ordi.webp">
