--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
     <meta name="author" content="taisezmoi">
-    <meta name="keywords" content="développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, station météo">
+    <meta name="keywords" content="dev web, dev, développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, station météo, reconversion">
     <meta property="og:title" content="taisezmoi">
-    <meta property="og:description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
-    <meta property="og:image" content="src/assets/images/ordi.webp">
+    <meta property="og:description" content="Développeuse web reconvertie, ce site a pour vocation de documenter mon exploration du métier. Apprenez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
+    <meta property="og:image" content="src/assets/image/profile-pic.webp">
     <meta property="og:url" content="https://www.taisezmoi.com/">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
