fix: website about

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/dino.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
+    <meta name="description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
     <meta name="author" content="taisezmoi">
-    <meta name="keywords" content="dev web, dev, développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, station météo, reconversion">
+    <meta name="keywords" content="dev web, web dev, dev, développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, reconversion">
     <meta property="og:title" content="taisezmoi">
-    <meta property="og:description" content="Développeuse web reconvertie, ce site a pour vocation de documenter mon exploration du métier. Apprenez à me connaître à travers mon portfolio, en parcourant mon blog et en découvrant mon application station météo réalisée à l'aide d'un Raspberry Pi et deux trois autres choses.">
+    <meta property="og:description" content="Développeuse web reconvertie, ce site a pour vocation de documenter mon exploration du métier. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
     <meta property="og:image" content="@/assets/image/profile-pic.webp">
     <meta property="og:url" content="https://www.taisezmoi.com/">
 
