--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/dino.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
-    <meta name="author" content="taisezmoi">
-    <meta name="keywords" content="dev web, web dev, dev, développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, reconversion">
-    <meta property="og:title" content="taisezmoi">
-    <meta property="og:description" content="Développeuse web reconvertie, ce site a pour vocation de documenter mon exploration du métier. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
-    <meta property="og:image" content="@/assets/image/profile-pic.webp">
-    <meta property="og:url" content="https://www.taisezmoi.com/">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
-    <title>taisezmoi</title>
-  </head>
-  <body>
-    <div id="app" class="h-screen"></div>
-    <script type="module" src="/src/frontend/js/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/dino.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Ce site a pour vocation de documenter mon exploration du développement web. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
+  <meta name="author" content="taisezmoi">
+  <meta name="keywords"
+    content="dev web, web dev, dev, développeuse, développeuse web, développement web, portfolio, blog, raspberry pi, reconversion">
+  <meta property="og:title" content="taisezmoi">
+  <meta property="og:description"
+    content="Développeuse web reconvertie, ce site a pour vocation de documenter mon exploration du métier. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
+  <meta property="og:image" content="@/assets/image/profile-pic.webp">
+  <meta property="og:url" content="https://www.taisezmoi.com/">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+    integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+  <title>taisezmoi</title>
+</head>
+
+<body>
+  <div id="app" class="h-screen"></div>
+  <script type="module" src="/src/frontend/js/main.js"></script>
+</body>
+
 </html>
