--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <body>
   <div id="app" class="h-screen"></div>
   <script type="module" src="/src/frontend/js/main.js"></script>
+  <script src="https://cdn.counter.dev/script.js" data-id="4cb5213d-ac59-40a3-8ad4-ba08361f8584"
+    data-utcoffset="1"></script>
 </body>
 
 </html>
