Feat: add dynamic tags for sharing articles on social media

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="taisezmoi">
   <meta property="og:description"
     content="Développeuse web reconvertie, ce site a pour vocation de documenter mon exploration du métier. Apprenez à me connaître à travers mon portfolio et en parcourant mon blog.">
-  <meta property="og:image" content="@/assets/image/profile-pic.webp">
+  <meta property="og:image" content="https://www.taisezmoi.com/assets/dino-XqyuFW9r.webp">
   <meta property="og:url" content="https://www.taisezmoi.com/">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
